--- a/app/design/frontend/base/default/template/parkandfinch/recaptcha/header.phtml
+++ b/app/design/frontend/base/default/template/parkandfinch/recaptcha/header.phtml
@@ -3,7 +3,7 @@
  * @category  ParkAndFinch
  * @package   ParkAndFinch_ReCaptcha
  * @author    Nicholas Leduc <nicholas@parkandfinch.com>
- * @copyright 2019 Park and Finch
+ * @copyright 2022 Park and Finch
  * @license   https://opensource.org/licenses/osl-3.0.php  Open Software License (OSL 3.0)
  * @link      https://www.parkandfinch.com/
  */
@@ -19,7 +19,7 @@
 <script type="text/javascript">
     <?php
     /**
-     * Associative array matching forms to their associated reCATPCHA widgetID
+     * Associative array matching forms to their associated reCAPTCHA widgetID
      */
     ?>
     var formWidgetIds = [];
